Bug #19873 After an ndb_mgmd restart, ndb_mgm needs a command to be executed twice
Submitted: 17 May 2006 11:31 Modified: 2 Nov 2006 6:38
Reporter: heh heh
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.0.21 OS:Linux (Linux x86_64)
Assigned to: Bugs System Target Version:

[17 May 2006 11:31] heh heh
Description:
After restaring ndb_mgmd, running any command in ndb_mgm will print the following:

ndb_mgm> show
Could not get status
*  1010: Management server not connected
*
ndb_mgm> show
Connected to Management Server at: localhost:1186
Cluster Configuration
---------------------
[ndbd(NDB)]     6 node(s)

..

and would require the same command to be entered again for it to work.

How to repeat:
as above

Suggested fix:
I'd recommend a connection retry similarly to how it is done when connections are idle
between mysqld and the mysql client for a long time and are closed.
[15 Aug 2006 5:17] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/10398

ChangeSet@1.2246, 2006-08-15 11:16:12+08:00, gni@dev3-127.(none) +1 -0
  BUG#19873 Running any command in ndb_mgm can automatically reconnect the server after
restarting the ndb_mgmd.
            connect command in the ndb_mgm can connect or reconnect the management server
successfully
[16 Aug 2006 10:03] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/10525

ChangeSet@1.2246, 2006-08-16 16:02:13+08:00, gni@dev3-127.(none) +1 -0
  BUG#19873 Running any command in ndb_mgm can automatically reconnect the server after
restarting the ndb_mgmd.
            connect command in the ndb_mgm can connect or reconnect the management server
successfully
[29 Aug 2006 5:22] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/10972

ChangeSet@1.2250, 2006-08-29 11:22:02+08:00, gni@dev3-127.(none) +1 -0
  BUG#19873 Merge dev3-127.(none):/mnt/mysql/home/ngb/mysql-5.0-ndb-bj
  into  dev3-127.(none):/mnt/mysql/home/ngb/bug19873
  MERGE: 1.2216.26.1
[10 Oct 2006 20:30] Jonas Oreland
pushed into 5.1.12
[1 Nov 2006 15:36] Jonas Oreland
pushed into 5.0.29
no fix in 4.1
[2 Nov 2006 6:38] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix for 5.0.029 & 5.1.12.
[4 Nov 2006 4:11] Jon Stephens
*Fix for 5.0 documented in 5.0.30 Release Notes.*