BUG#19873 Running any command in ndb_mgm can automatically reconnect the server after restarting the ndb_mgmd.           connect command in the ndb_mgm can connect or reconnect the management server successfully

ndb/src/mgmclient/CommandInterpreter.cpp:
  1.After restarting the ndb_mgmd, running any command in ndb_mgm will automatically reconnect the server firstly.
  2.The connect command in the ndb_mgm can connect or reconnect the management server successfully.