ndb/src/mgmclient/CommandInterpreter.cpp
@@ -704,6 +704,12 @@ CommandInterpreter::execute_impl(const char *_line)
   if (!connect())
     DBUG_RETURN(true);
 
+  if (ndb_mgm_check_connection(m_mgmsrv))
+  {
+    disconnect();
+    connect();
+  }
+
   if (strcasecmp(firstToken, "SHOW") == 0) {
     Guard g(m_print_mutex);
     executeShow(allAfterFirstToken);
@@ -1314,11 +1320,16 @@ CommandInterpreter::executeShow(char* parameters)
 void
 CommandInterpreter::executeConnect(char* parameters) 
 {
+  BaseString *basestring = NULL;
+
   disconnect();
   if (!emptyString(parameters)) {
-    m_constr= BaseString(parameters).trim().c_str();
+    basestring= new BaseString(parameters);
+    m_constr= basestring->trim().c_str();
   }
   connect();
+  if (basestring != NULL)
+    delete basestring;
 }
 
 //*****************************************************************************
